# BlockchainChess

./: .gitignore  backend_validator.py  chess.sol  oracle.py  pyproject.toml  readme.md  task.md
front/: README.md  package-lock.json  package.json
front/src/: App.jsx  ChessABI.json  index.css
tests/: test_backend.py  test_oracle.py
